Rubberduck.Parsing/Preprocessing/VBALikeParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\hosch\Documents\Visual Studio 2015\Projects\Rubberduck\Rubberduck.Parsing\PreProcessing\VBALike.g4 by ANTLR 4.5.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Rubberduck.Parsing {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.3")]
[System.CLSCompliant(false)]
public partial class VBALikeParser : Parser {
	public const int
		QUESTIONMARK=1, HASH=2, STAR=3, L_SQUARE_BRACKET=4, R_SQUARE_BRACKET=5, 
		DASH=6, EXCLAMATION=7, ANYCHAR=8;
	public const int
		RULE_compilationUnit = 0, RULE_likePatternString = 1, RULE_likePatternElement = 2, 
		RULE_likePatternChar = 3, RULE_likePatternCharlist = 4, RULE_likePatternCharlistElement = 5, 
		RULE_likePatternCharlistRange = 6, RULE_likePatternCharlistChar = 7;
	public static readonly string[] ruleNames = {
		"compilationUnit", "likePatternString", "likePatternElement", "likePatternChar", 
		"likePatternCharlist", "likePatternCharlistElement", "likePatternCharlistRange", 
		"likePatternCharlistChar"
	};

	private static readonly string[] _LiteralNames = {
		null, "'?'", "'#'", "'*'", "'['", "']'", "'-'", "'!'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "QUESTIONMARK", "HASH", "STAR", "L_SQUARE_BRACKET", "R_SQUARE_BRACKET", 
		"DASH", "EXCLAMATION", "ANYCHAR"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "VBALike.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public VBALikeParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class CompilationUnitContext : ParserRuleContext {
		public LikePatternStringContext likePatternString() {
			return GetRuleContext<LikePatternStringContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(VBALikeParser.Eof, 0); }
		public CompilationUnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compilationUnit; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVBALikeListener typedListener = listener as IVBALikeListener;
			if (typedListener != null) typedListener.EnterCompilationUnit(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVBALikeListener typedListener = listener as IVBALikeListener;
			if (typedListener != null) typedListener.ExitCompilationUnit(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVBALikeVisitor<TResult> typedVisitor = visitor as IVBALikeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompilationUnit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CompilationUnitContext compilationUnit() {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_compilationUnit);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 16; likePatternString();
			State = 17; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LikePatternStringContext : ParserRuleContext {
		public LikePatternElementContext[] likePatternElement() {
			return GetRuleContexts<LikePatternElementContext>();
		}
		public LikePatternElementContext likePatternElement(int i) {
			return GetRuleContext<LikePatternElementContext>(i);
		}
		public LikePatternStringContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_likePatternString; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVBALikeListener typedListener = listener as IVBALikeListener;
			if (typedListener != null) typedListener.EnterLikePatternString(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVBALikeListener typedListener = listener as IVBALikeListener;
			if (typedListener != null) typedListener.ExitLikePatternString(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVBALikeVisitor<TResult> typedVisitor = visitor as IVBALikeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLikePatternString(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LikePatternStringContext likePatternString() {
		LikePatternStringContext _localctx = new LikePatternStringContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_likePatternString);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 22;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << QUESTIONMARK) | (1L << HASH) | (1L << STAR) | (1L << L_SQUARE_BRACKET) | (1L << R_SQUARE_BRACKET) | (1L << DASH) | (1L << EXCLAMATION) | (1L << ANYCHAR))) != 0)) {
				{
				{
				State = 19; likePatternElement();
				}
				}
				State = 24;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LikePatternElementContext : ParserRuleContext {
		public LikePatternCharContext likePatternChar() {
			return GetRuleContext<LikePatternCharContext>(0);
		}
		public ITerminalNode QUESTIONMARK() { return GetToken(VBALikeParser.QUESTIONMARK, 0); }
		public ITerminalNode HASH() { return GetToken(VBALikeParser.HASH, 0); }
		public ITerminalNode STAR() { return GetToken(VBALikeParser.STAR, 0); }
		public LikePatternCharlistContext likePatternCharlist() {
			return GetRuleContext<LikePatternCharlistContext>(0);
		}
		public LikePatternElementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_likePatternElement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVBALikeListener typedListener = listener as IVBALikeListener;
			if (typedListener != null) typedListener.EnterLikePatternElement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVBALikeListener typedListener = listener as IVBALikeListener;
			if (typedListener != null) typedListener.ExitLikePatternElement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVBALikeVisitor<TResult> typedVisitor = visitor as IVBALikeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLikePatternElement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LikePatternElementContext likePatternElement() {
		LikePatternElementContext _localctx = new LikePatternElementContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_likePatternElement);
		try {
			State = 30;
			switch (_input.La(1)) {
			case R_SQUARE_BRACKET:
			case DASH:
			case EXCLAMATION:
			case ANYCHAR:
				EnterOuterAlt(_localctx, 1);
				{
				State = 25; likePatternChar();
				}
				break;
			case QUESTIONMARK:
				EnterOuterAlt(_localctx, 2);
				{
				State = 26; Match(QUESTIONMARK);
				}
				break;
			case HASH:
				EnterOuterAlt(_localctx, 3);
				{
				State = 27; Match(HASH);
				}
				break;
			case STAR:
				EnterOuterAlt(_localctx, 4);
				{
				State = 28; Match(STAR);
				}
				break;
			case L_SQUARE_BRACKET:
				EnterOuterAlt(_localctx, 5);
				{
				State = 29; likePatternCharlist();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LikePatternCharContext : ParserRuleContext {
		public ITerminalNode QUESTIONMARK() { return GetToken(VBALikeParser.QUESTIONMARK, 0); }
		public ITerminalNode HASH() { return GetToken(VBALikeParser.HASH, 0); }
		public ITerminalNode STAR() { return GetToken(VBALikeParser.STAR, 0); }
		public ITerminalNode L_SQUARE_BRACKET() { return GetToken(VBALikeParser.L_SQUARE_BRACKET, 0); }
		public LikePatternCharContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_likePatternChar; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVBALikeListener typedListener = listener as IVBALikeListener;
			if (typedListener != null) typedListener.EnterLikePatternChar(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVBALikeListener typedListener = listener as IVBALikeListener;
			if (typedListener != null) typedListener.ExitLikePatternChar(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVBALikeVisitor<TResult> typedVisitor = visitor as IVBALikeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLikePatternChar(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LikePatternCharContext likePatternChar() {
		LikePatternCharContext _localctx = new LikePatternCharContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_likePatternChar);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 32;
			_la = _input.La(1);
			if ( _la <= 0 || ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << QUESTIONMARK) | (1L << HASH) | (1L << STAR) | (1L << L_SQUARE_BRACKET))) != 0)) ) {
			_errHandler.RecoverInline(this);
			} else {
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LikePatternCharlistContext : ParserRuleContext {
		public ITerminalNode L_SQUARE_BRACKET() { return GetToken(VBALikeParser.L_SQUARE_BRACKET, 0); }
		public ITerminalNode R_SQUARE_BRACKET() { return GetToken(VBALikeParser.R_SQUARE_BRACKET, 0); }
		public ITerminalNode EXCLAMATION() { return GetToken(VBALikeParser.EXCLAMATION, 0); }
		public ITerminalNode[] DASH() { return GetTokens(VBALikeParser.DASH); }
		public ITerminalNode DASH(int i) {
			return GetToken(VBALikeParser.DASH, i);
		}
		public LikePatternCharlistElementContext[] likePatternCharlistElement() {
			return GetRuleContexts<LikePatternCharlistElementContext>();
		}
		public LikePatternCharlistElementContext likePatternCharlistElement(int i) {
			return GetRuleContext<LikePatternCharlistElementContext>(i);
		}
		public LikePatternCharlistContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_likePatternCharlist; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVBALikeListener typedListener = listener as IVBALikeListener;
			if (typedListener != null) typedListener.EnterLikePatternCharlist(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVBALikeListener typedListener = listener as IVBALikeListener;
			if (typedListener != null) typedListener.ExitLikePatternCharlist(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVBALikeVisitor<TResult> typedVisitor = visitor as IVBALikeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLikePatternCharlist(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LikePatternCharlistContext likePatternCharlist() {
		LikePatternCharlistContext _localctx = new LikePatternCharlistContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_likePatternCharlist);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 34; Match(L_SQUARE_BRACKET);
			State = 36;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				State = 35; Match(EXCLAMATION);
				}
				break;
			}
			State = 39;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				State = 38; Match(DASH);
				}
				break;
			}
			State = 44;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << QUESTIONMARK) | (1L << HASH) | (1L << STAR) | (1L << L_SQUARE_BRACKET) | (1L << EXCLAMATION) | (1L << ANYCHAR))) != 0)) {
				{
				{
				State = 41; likePatternCharlistElement();
				}
				}
				State = 46;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 48;
			_la = _input.La(1);
			if (_la==DASH) {
				{
				State = 47; Match(DASH);
				}
			}

			State = 50; Match(R_SQUARE_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LikePatternCharlistElementContext : ParserRuleContext {
		public LikePatternCharlistCharContext likePatternCharlistChar() {
			return GetRuleContext<LikePatternCharlistCharContext>(0);
		}
		public LikePatternCharlistRangeContext likePatternCharlistRange() {
			return GetRuleContext<LikePatternCharlistRangeContext>(0);
		}
		public LikePatternCharlistElementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_likePatternCharlistElement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVBALikeListener typedListener = listener as IVBALikeListener;
			if (typedListener != null) typedListener.EnterLikePatternCharlistElement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVBALikeListener typedListener = listener as IVBALikeListener;
			if (typedListener != null) typedListener.ExitLikePatternCharlistElement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVBALikeVisitor<TResult> typedVisitor = visitor as IVBALikeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLikePatternCharlistElement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LikePatternCharlistElementContext likePatternCharlistElement() {
		LikePatternCharlistElementContext _localctx = new LikePatternCharlistElementContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_likePatternCharlistElement);
		try {
			State = 54;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,6,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 52; likePatternCharlistChar();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 53; likePatternCharlistRange();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LikePatternCharlistRangeContext : ParserRuleContext {
		public LikePatternCharlistCharContext[] likePatternCharlistChar() {
			return GetRuleContexts<LikePatternCharlistCharContext>();
		}
		public LikePatternCharlistCharContext likePatternCharlistChar(int i) {
			return GetRuleContext<LikePatternCharlistCharContext>(i);
		}
		public ITerminalNode DASH() { return GetToken(VBALikeParser.DASH, 0); }
		public LikePatternCharlistRangeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_likePatternCharlistRange; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVBALikeListener typedListener = listener as IVBALikeListener;
			if (typedListener != null) typedListener.EnterLikePatternCharlistRange(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVBALikeListener typedListener = listener as IVBALikeListener;
			if (typedListener != null) typedListener.ExitLikePatternCharlistRange(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVBALikeVisitor<TResult> typedVisitor = visitor as IVBALikeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLikePatternCharlistRange(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LikePatternCharlistRangeContext likePatternCharlistRange() {
		LikePatternCharlistRangeContext _localctx = new LikePatternCharlistRangeContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_likePatternCharlistRange);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 56; likePatternCharlistChar();
			State = 57; Match(DASH);
			State = 58; likePatternCharlistChar();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LikePatternCharlistCharContext : ParserRuleContext {
		public ITerminalNode DASH() { return GetToken(VBALikeParser.DASH, 0); }
		public ITerminalNode R_SQUARE_BRACKET() { return GetToken(VBALikeParser.R_SQUARE_BRACKET, 0); }
		public LikePatternCharlistCharContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_likePatternCharlistChar; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVBALikeListener typedListener = listener as IVBALikeListener;
			if (typedListener != null) typedListener.EnterLikePatternCharlistChar(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVBALikeListener typedListener = listener as IVBALikeListener;
			if (typedListener != null) typedListener.ExitLikePatternCharlistChar(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVBALikeVisitor<TResult> typedVisitor = visitor as IVBALikeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLikePatternCharlistChar(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LikePatternCharlistCharContext likePatternCharlistChar() {
		LikePatternCharlistCharContext _localctx = new LikePatternCharlistCharContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_likePatternCharlistChar);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 60;
			_la = _input.La(1);
			if ( _la <= 0 || (_la==R_SQUARE_BRACKET || _la==DASH) ) {
			_errHandler.RecoverInline(this);
			} else {
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN.ToCharArray());
}
} // namespace Rubberduck.Parsing
